Repaired frameAllocation algo.